--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <p>PUBLISHED BY</p>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-        <
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img href=""
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
