--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img href="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
